--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 		<!-- Project JS -->
 		<script src="scripts/field.js"></script>
 		<script src="scripts/gameState.js"></script>
+		<script src="scripts/movement.js"></script>
 		<script src="scripts/assorted.js"></script>
 		<script src="scripts/onload.js"></script>
 	</head>
