--- a/index.html
+++ b/index.html
@@ -9,25 +9,7 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 		<style>
-			.bd-placeholder-img {
-				font-size: 1.125rem;
-				text-anchor: middle;
-				-webkit-user-select: none;
-				-moz-user-select: none;
-				user-select: none;
-			}
-
-			@media (min-width: 768px) {
-				.bd-placeholder-img-lg {
-					font-size: 3.5rem;
-				}
-			}
 		</style>
-
-		
-		<!-- Custom styles for this template -->
-		<link href="styles/cover.css" rel="stylesheet">
-
 
 		<!-- Popper and Bootstrap JS -->
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
@@ -44,24 +26,35 @@
 		<script src="scripts/assorted.js"></script>
 		<script src="scripts/onload.js"></script>
 	</head>
-	<body class="d-flex h-100 text-center text-white bg-dark" id="cat">
+	<body class="d-flex h-100 text-center text-white bg-dark">
 		<div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
-			<header class="mb-auto cover-container w-100 mx-auto">
-				<div>
-					<h3 class="float-md-start mb-0">Cover</h3>
-					<nav class="nav nav-masthead justify-content-center float-md-end">
-						<a class="nav-link active" aria-current="page" href="#">Home</a>
-						<a class="nav-link" href="#">Features</a>
-						<a class="nav-link" href="#">Contact</a>
-					</nav>
+
+			<main class="my-auto">
+				<div class="mx-auto" id="field_layout">
+					<span class="text-end ms-auto">Player 1</span>
+					<table id="field"></table>
+					<span class="text-start">Player 2</span>	
 				</div>
-			</header>
 
-			<main class="mx-auto">
-				<table id="field">
-				</table>
+				<div class="my-auto" id="multitask_window">
+					<div class="mx-auto" id="icon_display">
+						<img src="props/joystick.svg">
+						<img src="props/chat.svg">
+						<img src="props/profile.svg">
+						<img src="props/planet.svg">
+					</div>
+					<div class="mx-auto my-start" id="message_group">
+						<div class="text-start" id="message_display">hello</div>
+						<div class="input-group" id="message_box">
+							<input type="text" class="form-control" placeholder="Message">
+							<div class="input-group-append">
+								<button class="btn btn-success" type="button">Send</button>
+							</div>
+						</div>
+					</div>
+				</div>
 			</main>
-
+<!-- 
 			<footer class="d-flex mt-auto mx-auto text-white-50 cover-container w-100">
 				<div class="row mb-3 w-100 g-3">
 					<div class="input-group col mw-25">
@@ -78,7 +71,7 @@
 						<button class="btn btn-success col" type="submit" onclick="update()" id="trash">parse</button>
 					</div>
 				</div>
-			</footer>
+			</footer> -->
 			<div id="ninja" style="display:none;"></div>
 		</div>
 	</body>
