--- a/index.html
+++ b/index.html
@@ -28,6 +28,18 @@
 	</head>
 	<body class="d-flex h-100 text-center text-white bg-dark">
 		<div class="d-flex w-100 h-100 p-3 mx-auto flex-column">
+			<button id="button_offcanvas" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">mඞnu</button>
+			<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample">
+				<div class="offcanvas-header">
+					<h5 class="offcanvas-title" id="offcanvasExampleLabel"></h5>
+					<button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
+				</div>
+				<div class="offcanvas-body">
+					<a href="#">Play</a>
+					<a href="#">Learn</a>
+					<a href="#">Sign out</a>
+				</div>
+			</div>
 
 			<main class="my-auto">
 				<div class="mx-auto" id="field_layout">
